Dummy_Package_for_scratch_org/main/default/objects/Deployment_Job__c/Deployment_Job__c.object-meta.xml
<CustomObject>
    <label>Deployment Job</label>
    <nameField>
        <displayFormat>DJ-{00000}</displayFormat>
        <label>Deployment Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Jobs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>