Dummy_Package_for_scratch_org/main/default/objects/Deployment_Job__c/fields/Async_Job_ID__c.field-meta.xml
<CustomField>
    <fullName>Async_Job_ID__c</fullName>
    <label>Async Job ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>