Dummy_Package_for_scratch_org/main/default/objects/Deployment_Job__c/fields/Deployed__c.field-meta.xml
<CustomField>
    <fullName>Deployed__c</fullName>
    <label>% Deployed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>