Dummy_Package_for_scratch_org/main/default/objects/Deployment_Job__c/fields/Destination_Id__c.field-meta.xml
<CustomField>
    <fullName>Destination_Id__c</fullName>
    <description>Read only field used internally for system property replacement.</description>
    <formula>CASESAFEID(Destination_Org__r.To_Org__r.Environment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Read only field used internally for system property replacement.</inlineHelpText>
    <label>Destination Id</label>
    <type>Text</type>
</CustomField>