Dummy_Package_for_scratch_org/main/default/objects/Deployment_Job__c/fields/Destination_Org__c.field-meta.xml
<CustomField>
    <fullName>Destination_Org__c</fullName>
    <label>Destination Credential</label>
    <referenceTo>Destination_Org__c</referenceTo>
    <relationshipLabel>Deployment Jobs</relationshipLabel>
    <relationshipName>Deployment_Jobs</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>