Dummy_Package_for_scratch_org/main/default/objects/Deployment_Job__c/fields/External_Status__c.field-meta.xml
<CustomField>
    <fullName>External_Status__c</fullName>
    <label>External Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>