Dummy_Package_for_scratch_org/main/default/objects/Deployment_Job__c/fields/Git_Repository__c.field-meta.xml
<CustomField>
    <fullName>Git_Repository__c</fullName>
    <description>Read only field used internally for system property replacement.</description>
    <formula>Step__r.Deployment__r.Promotion__r.Project__r.Deployment_Flow__r.Git_Repository__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Read only field used internally for system property replacement.</inlineHelpText>
    <label>Repository Id</label>
    <type>Text</type>
</CustomField>