Dummy_Package_for_scratch_org/main/default/objects/Deployment_Job__c/fields/Last_Result__c.field-meta.xml
<CustomField>
    <fullName>Last_Result__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Latest result with more details of the job execution.</inlineHelpText>
    <label>Last Result</label>
    <referenceTo>Result__c</referenceTo>
    <relationshipLabel>Deployment Jobs</relationshipLabel>
    <relationshipName>Deployment_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>