Dummy_Package_for_scratch_org/main/default/objects/Deployment_Job__c/fields/Pipeline_Id__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Id__c</fullName>
    <description>Read only field used internally for system property replacement.</description>
    <formula>IF(
NOT(ISBLANK(Step__r.Deployment__r.Promotion__r.Project__r.Deployment_Flow__c)),
CASESAFEID(Step__r.Deployment__r.Promotion__r.Project__r.Deployment_Flow__c),
CASESAFEID(Step__r.Deployment__r.Promotion__r.Release__r.Project__r.Deployment_Flow__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Read only field used internally for system property replacement.</inlineHelpText>
    <label>Pipeline Id</label>
    <type>Text</type>
</CustomField>