Dummy_Package_for_scratch_org/main/default/objects/Deployment_Job__c/fields/Source_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Id__c</fullName>
    <description>Read only field used internally for system property replacement.</description>
    <formula>CASESAFEID(Step__r.Deployment__r.From_Org__r.Environment__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Read only field used internally for system property replacement.</inlineHelpText>
    <label>Source Id</label>
    <type>Text</type>
</CustomField>