Dummy_Package_for_scratch_org/main/default/objects/Deployment_Job__c/fields/Status_Flag__c.field-meta.xml
<CustomField>
    <fullName>Status_Flag__c</fullName>
    <formula>IMAGE(
				
  CASE(Status__c,  
  &quot;Success&quot;, &quot;/img/samples/flag_green.gif&quot;,
  &quot;Failed&quot;, &quot;/img/samples/flag_red.gif&quot;,
  &quot;In progress&quot;, &quot;/img/loading.gif&quot;,
  &quot;/s.gif&quot;), 
   &quot;&quot; )+&quot; &quot;+   
			IMAGE(
							CASE(External_Status__c,
			         &quot;Queued&quot;, &quot;/img/loading.gif&quot;,
            &quot;Success&quot;,&quot;/img/samples/flag_green.gif&quot;,
            &quot;Timed out&quot;, &quot;/img/samples/flag_red.gif&quot;,
            &quot;Failed&quot;,&quot;/img/samples/flag_red.gif&quot;,
												&quot;/s.gif&quot;
							), &quot;&quot;
			)</formula>
    <label>Status Flag</label>
    <type>Text</type>
</CustomField>