Dummy_Package_for_scratch_org/main/default/objects/Deployment_Job__c/fields/Step__c.field-meta.xml
<CustomField>
    <fullName>Step__c</fullName>
    <label>Step</label>
    <referenceTo>Step__c</referenceTo>
    <relationshipLabel>Deployment Jobs</relationshipLabel>
    <relationshipName>Deployment_Jobs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>