Dummy_Package_for_scratch_org/main/default/objects/Deployment_Job__c/fields/Validation_ID__c.field-meta.xml
<CustomField>
    <fullName>Validation_ID__c</fullName>
    <inlineHelpText>To be used for Quick deployments. Available since metadata api v33 (Spring 15)</inlineHelpText>
    <label>Validation ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>